@@ -6,7 +6,7 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.List;
 import org.junit.Test;
@@ -25,8 +25,7 @@ public class IntegerExtensionsTest extends AbstractProcessorTest {
     var qtypeContent =
         new String(
             Files.readAllBytes(
-                Paths.get(
-                    "target", "integerExtensions", "com", "querydsl", "QExampleEntity2.java")),
+                Path.of("target", "integerExtensions", "com", "querydsl", "QExampleEntity2.java")),
             StandardCharsets.UTF_8);
     // The superclass' id property is inherited, but can't be assigned to the custom QInteger
     assertThat(qtypeContent)
